mule-user-guide/v/3.2/application-deployment.adoc
= 应用程序部署

== 开始骡子

运行`<MULE_HOME>/bin/mule`或将Mule作为服务启动，从而启动mule。默认情况下，`<MULE_HOME>/apps`目录中的应用程序将被部署。您还可以指定特定的应用程序启动（以冒号分隔 -  **:**），Mule 3.0会在启动应用程序时遵守顺序。在这种情况下，只有指定的应用程序才会启动。

通过指定要运行的应用启动Mule：

[source, code, linenums]
----
mule -app foo
----

`foo`是`$MULE_HOME/apps/foo`中的Mule应用。

从这一刻起，Mule每三秒钟检查`$MULE_HOME/apps/foo/mule-config.xml`次更新。人们可以更新应用程序的jar内容，并触摸/修改这个文件，让Mule重新加载配置和类的修改。

== 部署应用程序

Mule应用程序（压缩或分解）可以放入**$MULE_HOME/apps**中。如果Mule已经运行，应用程序将动态部署。

[NOTE]
Mule中的所有应用程序都在运行时解压缩，并删除原始压缩文件。这意味着，例如将一个zip文件放入'apps'目录将会创建一个具有相同名称（sans'zip'扩展名）的新文件夹并删除该zip文件。


成功的应用程序部署由以下方面确认

* 在应用目录中有一个解压缩的应用程序文件夹。例如。为`stockTrader.zip`  -  `$MULE_HOME/apps/stockTrader`。
* 为正在运行的应用创建的锚文件，例如`$MULE_HOME/apps/stockTrader-anchor.txt`

如果您希望将应用程序存储在其他位置，则可以在基于Unix的系统上执行此操作，方法是从`$MULE_HOME/apps`创建到您的应用程序目录的符号链接

== 取消部署应用程序

建议您不要直接删除应用程序文件夹，而只应用程序的锚文件：

. 防止来自热部署层的干扰，并且不会为并发冲突操作留出空间。
. 避免某些操作系统上潜在的应用程序jar锁定问题，并允许清理关闭和取消部署。

例如。如果`stockTrader`应用程序正在运行（应用程序文件夹和`$MULE_HOME/apps/stockTrader-anchor.txt`文件一样，只需删除锚文件即可在运行时从Mule实例中删除该应用程序。应用程序终止。

== 在运行时更新应用程序

在运行时更新Mule应用程序可能是一个复杂的变化，涉及类修改，端点修改（例如更改端口等）以及重新配置的流程。因此，任何应用程序更新都会在正常情况下关闭应用程序并重新配置自身。实际上，这对用户来说非常透明，并且在几秒钟内就会发生。

有几种方法可以更新应用程序：

* 通过在现有分解应用程序文件夹中删除修改，并触摸默认情况下在应用程序根目录中的“主”配置文件（`mule-config.xml`）。
* 将新的*zipped*版应用放入`$MULE_HOME/apps`目录。 Mule会将此检测为现有的应用更新，并确保应用的全面重新部署。请注意，对旧应用程序文件夹的任何修改都会被丢弃 - 新的应用程序文件夹是来自zip的干净的分解应用程序。

正如你所看到的，两者都与现有的构建工具很好地集成，相互之间的偏好确实取决于已建立的开发实践。

== 禁用Mule容器模式

如果您想运行传统的2.x方式运行Mule 3，请编辑`$MULE_HOME/conf/wrapper.conf`文件并替换以下行：

[source, code, linenums]
----
# Java Main class
wrapper.java.mainclass=org.mule.module.reboot.MuleContainerBootstrap
----


与这一个：

[source, code, linenums]
----
# Java Main class
wrapper.java.mainclass=org.mule.module.boot.MuleBootstrap
----

*When run in this legacy mode, none of the new application deployment features apply*

== 嵌入式Mule

当Mule嵌入到应用服务器，Java应用程序，单元测试，IDE等中并以编程方式启动时，部署功能被禁用，Mule遵循传统应用程序模型。

== 故障处理

如果应用程序无法启动（例如，提供了破坏的配置文件），Mule会*not*监控应用程序的更改（因为技术上没有应用程序在运行）。要更新这样的应用程序，只需通过将更新后的存档放入应用程序文件夹重新部署应用程序即可。
